--- a/markdown/code-and-list.html
+++ b/markdown/code-and-list.html
@@ -21,5 +21,6 @@ hello
 hello
 </code></pre></li>
 </ul></li>
-<li>the next list item</li>
+<li><p>the next list item</p></li>
+<li><p><a href="https://www.google.com/"><code>hello</code></a></p></li>
 </ul>
