--- a/cordova/hello/www/index.html
+++ b/cordova/hello/www/index.html
@@ -40,7 +40,7 @@
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received"><a href="http://www.itsoflife.com/_knotes_.html">Knotes</a></p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
