semi-automated-update

--- a/cordova/itsoflife/platforms/android/app/src/main/assets/www/index.html
+++ b/cordova/itsoflife/platforms/android/app/src/main/assets/www/index.html
@@ -41,7 +41,7 @@
             <br />
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <a href="https://adhuliya.pythonanywhere.com/_knotes_.html"
+                <a href="https://adhuliya.pythonanywhere.com/_knots_.html"
                   onclick="myopen(this);">
                 <p class="event received">Knots</p>
                 </a>
